# arbor

./: CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  README.md  demo.tape  release-plz.toml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  prepare-release.yml  release.yml
src/: cli.rs  config.rs  display.rs  git.rs  hooks.rs  main.rs
src/commands/: add.rs  cd.rs  clean.rs  clone.rs  dir.rs  fetch.rs  init.rs  list.rs  mod.rs  prune.rs  remove.rs  status.rs  switch.rs
src/git/: commands.rs  mod.rs  runner.rs  types.rs
tapes/: clean-1-setup.tape  clean-2-picker.tape  clean-3-result.tape  demo.tape
tests/: add.rs  clean.rs  dir.rs  help.rs  hooks.rs  init.rs  integration.rs  list.rs  local_config.rs  prune.rs  remove.rs  switch.rs
tests/common/: mod.rs
