[package]
name = "arbor-cli"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "arbor"
path = "src/main.rs"

[dependencies]
anyhow = "1.0.102"
clap = { version = "4.6.0", features = ["derive"] }
dirs = "6.0.0"
serde = { version = "1.0.228", features = ["derive"] }
toml = "1.0.6"

[dev-dependencies]
assert_cmd = "2.2.0"
tempfile = "3.27.0"
