[package]
name = "arbor"
version = "0.1.0"
edition = "2024"
license = "MIT"
description = "A friendly CLI for managing git worktrees"
repository = "https://github.com/morellodev/arbor"
authors = ["Dennis Morello"]

[dependencies]
anyhow = "1.0.102"
clap = { version = "4.6.0", features = ["derive"] }
clap_complete = "4.5.50"
colored = "3.1.1"
comfy-table = "7.2.2"
dirs = "6.0.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0"
toml = "1.0.6"

[dev-dependencies]
assert_cmd = "2.2.0"
tempfile = "3.27.0"
